--- a/src/main/webapp/assets/css/styles.css
+++ b/src/main/webapp/assets/css/styles.css
@@ -42,6 +42,10 @@ h3, h4 {
 	color: #9fadbb;
 }
 
+#weld-dev-mode-info{
+    display: none !important;
+}
+
 .color-gray { color: #5f6468; }
 .color-blue { color: #30a5ff; }
 .color-teal { color: #1ebfae; }
@@ -860,4 +864,21 @@ h1.page-header {
 }
 .fixed-table-pagination .pagination-detail {
 	margin-top: 20px;
+}
+
+
+
+
+.ui-button{
+    display: inline-block;
+    position: relative;
+    padding: 0;
+    margin-right: .1em;
+    text-decoration: none!important;
+    cursor: pointer;
+    text-align: center;
+    zoom: 1;
+    overflow: visible;
+    border: none !important;
+    background: #fff !important;
 }
